--- a/public/themes/tompress/assets/.vite/manifest.json
+++ b/public/themes/tompress/assets/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "resources/js/index.js": {
-    "file": "js/index-D8fYNLyd.js",
+    "file": "js/index-C9Ub9XWc.js",
     "name": "index",
     "src": "resources/js/index.js",
     "isEntry": true,
     "css": [
-      "css/index-CrmWZSYG.css"
+      "css/index-DEW3ldSx.css"
     ]
   }
 }
